tests/derive/generic_lifetime.stderr
error: run should not take generic arguments
 --> $DIR/generic_lifetime.rs:4:7
  |
4 | fn run<'a>() {}
  |       ^^^^
