tests/derive/generic_lifetime.rs
use shipyard::*;

#[system(Test)]
fn run<'a>() {}

fn main() {}
